aks/lab-ms-graph/gw.route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab-oauth2-http
  namespace: labs
spec:
  parentRefs:
    - name: traefik
      sectionName: http
      kind: Gateway

  hostnames:
    - lab-ms-graph-aks.private.antoniocaccamo.work

  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab-oauth2-https
  namespace: labs
spec:
  parentRefs:
    - name: traefik
      sectionName: https
      kind: Gateway

  hostnames:
    - lab-ms-graph-aks.private.antoniocaccamo.work

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lab-ms-graph
          port: 80
