aks/lab-ms-graph/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lab-ms-graph-ingress-route
  namespace: labs
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-secret
  routes:
    - match: Host(`lab-ms-graph-aks.private.antoniocaccamo.work`)
      kind: Rule
      services:
        - name: lab-ms-graph
          port: 80
